[tool.poetry]
name = "ping"
version = "0.1.0"
description = ""
authors = ["Foppe Hemminga <foppe@fop.pe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
postgres = "^4.0"
psycopg = "^3.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
